*libuecc-5 (22 Aug 2015)

  22 Aug 2015;  <github@itfriend.de> +libuecc-5.ebuild, +metadata.xml:
  dev-libs/libuecc: initial import