@@ -1,5 +1,8 @@
 DIST libuecc-5.tar.xz 32200 SHA256 a9a4bc485019410a0fbd484c70a5f727bb924b7a4fe24e6224e8ec1e9a9037e7 SHA512 f551c35ad4392a7b7a318a1317c0b70ee2b6f820aa6dd243f65d7944fc0778030c01e212242d81f9324c945125e30720e5999c101e78e6f61176966204db3d6b WHIRLPOOL 3f26259947d1ad8da8ebba084437bd7667bff237b78aaf6393f3b2e39b52bdd1e2e0df11d76bee187ed98f0785ff9d1ed8ebb134526eadb34a6e500ad20f6d09
+DIST libuecc-6.zip 44205 SHA256 8cc7f257ff61ba5c9f5e0f95a931b69d84ec3795ac402b9d4d93006c7fd96ae6 SHA512 634bf278f8aacc10923e8710a3c5417ad14832ae9a1bbbfe6d65a783dbd77552e1a081dabd758017d35fea59c40b75b3f28063f11911993d403d9870b8108236 WHIRLPOOL b01f6fb0385ae8dd82aa2b415c48cbff8b2058e2992526a6e76b81890b876ff09084d2a3112aa6fb7eaeee0924ecc4cd3956205e4eb097acde42dac4c2a02ca6
+DIST libuecc-7.zip 44450 SHA256 3c84d2032aeb8fb09162d209f65d458b31fc7c46fc213acc891a9ec6d4507dc3 SHA512 d99a5a34f08721f8dac0afb2a3515784293e2a697a36d21bec5d670f2455ac6c1087599475b7c93426672c5a4cae4fd6306cc3b5cbb95385f1a7d6616c2b578e WHIRLPOOL ed5845f475d3ffd2b15274c26fa21d4aecc87a15a47a59ecb4e5ae1023832830146c0734a40ba0961eb8259771f756985c377c70f372caddcc83e2a179f0934d
 EBUILD libuecc-5.ebuild 640 SHA256 66d0fdd0d908d0611599108c90375812c8beb5d15180ff78c55cdcaa424a9439 SHA512 506acce4a616b6c6d05406704942f5e71f3a790f3f2d2beadeeae40b4c2c75cba565685cd38d6979ff0a4ec948645bfd350027b9289c9e100ffa3a87e37610bc WHIRLPOOL ceb97733702a8dcc0799bdea4789d97fc4808a0d51b30844bec73025189487be76d133152f08674f5bdde73bc1f41807f52b702bac221c5f325bc8c4fcd73d83
-MISC ChangeLog 141 SHA256 9b275ea6637c2ea6b6e056b0c734c9ececf66790271505da2075685cd68deffa SHA512 3b8140df9286c7db317128b991c3fab139da770ebf3181dffd1dd5eab0af96bf7931cf423bc283c0c18092d7066339baaf772498625fbd4c3bbed09baf8192fb WHIRLPOOL 287cfbbefccb82be6e82b23c67a1f8b87b5b87632089dd9ba0317d231928515c7482dd4b4ff78feaed432927dc34eaeec3d53c9ee41d507e6f9960f7aaf6a36d
-MISC Changelog 0 SHA256 e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855 SHA512 cf83e1357eefb8bdf1542850d66d8007d620e4050b5715dc83f4a921d36ce9ce47d0d13c5d85f2b0ff8318d2877eec2f63b931bd47417a81a538327af927da3e WHIRLPOOL 19fa61d75522a4669b44e39c1d2e1726c530232130d407f89afee0964997f7a73e83be698b288febcf88e3e03c4f0757ea8964e59b63d93708b138cc42a66eb3
-MISC metadata.xml 255 SHA256 d37af9d9dd2745aa5898fca919a1bc6d1dd8e33ac02e899937430a881d643f58 SHA512 caa92d9ff8deb2709bec92d910ec20e85c1bcc24a2888c3ee081053d42677f9f84e5256175727fba139e51cbf306947ab50ff92d25bc27994b9350cbe97b21a7 WHIRLPOOL 8e4fa5b7600afc1c5a9127f095bce3b175e4454ddd1355a5eb677f07040f110a156fcd5464c96fbb403193312072dd470ac41656603de57364a308c6fb5b0d5a
+EBUILD libuecc-6.ebuild 555 SHA256 4ef8057da07f27bbb3214ec3d6a80a715423249a8f78702ff1386ea6ee1547dc SHA512 dbe4eed4c5eb3ea2c7bb99207de81a71041eeb6ad5783a004eb2a29624487e4c809a691b4c2287dc9e3431450d2d99aff063a79c31b3f81199851bfa4c8e6832 WHIRLPOOL 0225282cd0f8bdf79a9c27af91d44e20ce000141ec1d8ddd367e1df0beb7ecc026f4976dc53ba01820204129a33548b3eeeae9077a52acc393db04b3e783c8ed
+EBUILD libuecc-7.ebuild 555 SHA256 4ef8057da07f27bbb3214ec3d6a80a715423249a8f78702ff1386ea6ee1547dc SHA512 dbe4eed4c5eb3ea2c7bb99207de81a71041eeb6ad5783a004eb2a29624487e4c809a691b4c2287dc9e3431450d2d99aff063a79c31b3f81199851bfa4c8e6832 WHIRLPOOL 0225282cd0f8bdf79a9c27af91d44e20ce000141ec1d8ddd367e1df0beb7ecc026f4976dc53ba01820204129a33548b3eeeae9077a52acc393db04b3e783c8ed
+MISC ChangeLog 308 SHA256 b8c7b1e87ec0da5d12e195bda0cd21d57b085b0e4d58b0aa10284b8ee4575eb5 SHA512 cde0186a4dca57acd4f2bdb6ac0582efad22b61b48e5711ccb4b58280fd69ee48d4f418c3a0c02d6b819876e79a379488eb6c3959ebcbcfa98a27f82424bf1d5 WHIRLPOOL e14721ac6183136b057d5c4f58ef22f752f8329d3d98a6a4664181d6129d9df59d692ca9f181f56fd0ab3cf5df8d94dcc819bee642893f96c04e1407ad80d2c3
+MISC metadata.xml 269 SHA256 5d9292d18b671597fd1e8f554422819aa1e5a4f425980a151c13febca69aad84 SHA512 4b84f699d66f062bdc5e0cc77f090c29285da7fab78a0fd65fd0f58fbb7e7feb3f47987e74e7286e4061053d0952490576825cfbac92c1a1046d87cd504a5c4d WHIRLPOOL ef38db00e2dfd946e05c86de589a384c2188f055528f3d56972a88d148a1597d4966da2717852e4191201bb902194899cb88698bcc24dd705f308f7f1b705369
