@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-    <maintainer>
+    <maintainer type="person">
         <email>ogelpre@itfriend.de</email>
         <name>Benedikt Neuffer</name>
     </maintainer>
