@@ -1,3 +1,10 @@
+*libuecc-6 (16 Oct 2016)
+*libuecc-7 (16 Oct 2016)
+
+  16 Oct 2016;  <bene@gentoo.org> +libuecc-6.ebuild, +libuecc-7.ebuild,
+  metadata.xml:
+  dev-libs/libuecc: v6 and v7 added
+
 *libuecc-5 (22 Aug 2015)
 
   22 Aug 2015;  <github@itfriend.de> +libuecc-5.ebuild, +metadata.xml:
